--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 locale                   : "en-US"
-title                    : "Project Lab"
+title                    : ""
 title_separator          : "-"
 name                     : "Austin Lundeby"
 description              : ""
