--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Settings
 locale                   : "en-US"
-title                    : ""
-title_separator          : "-"
+title_separator          : ""
+title                    : "" # Appended to page title after separator
 name                     : "Austin Lundeby"
 description              : ""
 masthead_title           : "Austin Lundeby"
