--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 locale                   : "en-US"
-title_separator          : ""
+title_separator          : "-"
 title                    : "" # Appended to page title after separator
 name                     : "Austin Lundeby"
 description              : ""
