--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,12 @@ remote_theme: "mmistakes/minimal-mistakes@4.15.1"
 include: ["_pages"]
 
 host: 0.0.0.0
+
+defaults:
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: false
